[project]
name = "browserist"
version = "1.7.16"
description = "Extension for the Selenium web driver that makes browser automation even easier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage==7.13.1",
    "flake8==7.3.0",
    "keyring==25.7.0",
    "lxml==6.0.2",
    "mypy==1.17.1",
    "pillow==12.1.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "requests==2.32.5",
    "selenium==4.40.0",
    "tox==4.34.1",
]

[build-system]
requires = [
    "setuptools==80.10.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 120
