[metadata]
name = browserist
version = attr: browserist.__version__
author = Jakob Bagterp
author_email = jakob_bagterp@hotmail.com
maintainer = Jakob Bagterp
maintainer_email = jakob_bagterp@hotmail.com
description = Extension for the Selenium web driver that makes browser automation even easier
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    python
    selenium
    browser
    automation
url = https://github.com/jakob-bagterp/browserist
project_urls =
    Bug Tracker = https://github.com/jakob-bagterp/browserist/issues
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache-2.0
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
setup_requires =
    lxml >=4.9.0
    selenium >=4.0.0a6.post2
install_requires =
    lxml >=4.9.0
    selenium >=4.0.0a6.post2
    chromedriver
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    coverage >=6.4.1
    keyring >=23.5.1
    mypy >=0.960
    pytest >=7.1.2
    pytest-cov >=3.0.0
    flake8 >=4.0.1
    tox >=3.25.0

[options.packages.find]
where = src

[options.package_data]
browserist = py.typed

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
disallow_any_unimported = True
no_implicit_reexport = True
show_error_codes = True
strict = True
warn_unreachable = True

# Ignore errors since the winreg module only works for Windows and will give errors on other systems.
[mypy-browserist.factory.internet_explorer.*]
ignore_errors = True

[pycodestyle]
max_line_length = 120

[flake8]
ignore =
    E501  # Line length set to 120 by Autopep8.
exclude =
    .git
    __pycache__
    dist
