[metadata]
name = browserist
version = 1.7.15
author = Jakob Bagterp
author_email = jakob_bagterp@hotmail.com
maintainer = Jakob Bagterp
maintainer_email = jakob_bagterp@hotmail.com
description = Extension for the Selenium web driver that makes browser automation even easier
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    python
    selenium
    browser
    automation
url = https://jakob-bagterp.github.io/browserist/
download_url = https://pypi.org/project/browserist/
project_urls =
    Bug Tracker = https://github.com/jakob-bagterp/browserist/issues
    Documentation = https://jakob-bagterp.github.io/browserist/
    API Reference = https://jakob-bagterp.github.io/browserist/reference/
    Source Code = https://github.com/jakob-bagterp/browserist
    Release Notes = https://github.com/jakob-bagterp/browserist/releases
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache-2.0
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
setup_requires =
    lxml==6.0.2
    pillow==12.1.0
    requests==2.32.5
    selenium==4.40.0
install_requires =
    lxml==6.0.2
    pillow==12.1.0
    requests==2.32.5
    selenium==4.40.0
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    coverage==7.13.1
    flake8==7.3.0
    keyring==25.6.0
    mypy==1.17.1
    pytest==9.0.2
    pytest-cov==7.0.0
    tox==4.34.1

[options.packages.find]
where = src

[options.package_data]
browserist = py.typed

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
disallow_any_unimported = True
no_implicit_reexport = True
show_error_codes = True
strict = True
warn_unreachable = True

# Ignore errors since the winreg module only works for Windows and will give errors on other systems.
[mypy-browserist.factory.internet_explorer.*]
ignore_errors = True

[pycodestyle]
max_line_length = 120

[flake8]
ignore =
    # Line length set to 120 by Autopep8:
    E501
exclude =
    .git
    __pycache__
    dist
